kubernetes/220419-20 django-eks-3tier-ingress/DB svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    name: db
  clusterIP: None
